change to relative position

--- a/style/main.css
+++ b/style/main.css
@@ -109,8 +109,8 @@ body {
 }
 
 .six .hat {
-  left: -100%;
-  position: absolute;
+  left: -50%;
+  position: relative;
   /* transform: scale(0.1); */
   top: -35%;
   width: 80px;
