--- a/style/main.css
+++ b/style/main.css
@@ -110,7 +110,7 @@ body {
 
 .six .hat {
   left: -50%;
-  position: relative;
+  position: absolute;
   /* transform: scale(0.1); */
   top: -35%;
   width: 80px;
